[metadata]
  name = unpackable
  description = 'Destructure any object'
  license = AGPL-3.0
  version = 0.0.1
  license_file = LICENSE
  long_description = file: README.md
  long_description_content_type = text/markdown
  classifiers =
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10

[options]
  zip_safe = True
  include_package_data = True
  url = attr: subfin.HOMEPAGE
  project_urls = https://alexdelorenzo.dev
  packages = unpackable
  install_requires = file: requirements.txt
  package_data =
    unpackable
