[metadata]
  name = unpackable
  description = Destructure any object
  license = AGPL-3.0
  version = 0.0.1
  license_file = LICENSE
  long_description = file: README.md
  long_description_content_type = text/markdown
  classifiers =
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10

[options]
  zip_safe = True
  include_package_data = True
  url = https://github.com/alexdelorenzo/unpackable
  project_urls = https://github.com/alexdelorenzo/unpackable
  packages = unpackable
#   install_requires = 
#     typing-extensions>=3.10.0.0
